# HannaLeon

./: backlog.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfiledev  pyproject.toml
backend/app/: database.py  main.py
backend/app/auth/: dependencies.py  models.py  router.py  utils.py
backend/app/todo/: crud.py  models.py  router.py
frontend/: .dockerignore  Dockerfile  Dockerfiledev  package-lock.json  package.json  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: types.ts
frontend/src/lib/api/: auth.ts  client.ts  todos.ts
frontend/src/lib/components/: TodoItem.svelte  TodoList.svelte
frontend/src/lib/stores/: auth.svelte.ts
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
frontend/src/routes/liste/: +page.svelte  +page.ts
frontend/src/routes/login/: +page.svelte
